Updating to JDK 11
https://issues.redhat.com/browse/DROOLS-5456

Automatic updates
https://jenkins.updater.j2eeguys.com/

Signed-off-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>